# Dill_tils

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  upload.py
.github/workflows/: pypi-upload.yml  pytest.yml
Dill-tils/flask/: __init__.py
Dill-tils/text/: write.py
docs/source/: conf.py  dill_tils.flask.rst  dill_tils.rst  dill_tils.text.rst  modules.rst
src/dill_tils/email/: __init__.py  email.py
src/dill_tils/flask/: __init__.py  recaptcha.py
src/dill_tils/text/: __init__.py  clear.py  write.py
src/tests/: test_email.py  test_text.py
