[metadata]
name = dill_tils
version = 1.0.5
author = Dillon Barnes
author_email = dillonbarnes07@gmail.com
description = A collection of DillonB07s utilities
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dillonb07, utils
url = https://dillonb07.is-a.dev/project/dill_tils
project_urls =
    Source Code = https://github.com/DillonB07/dill_tils
    Bug Tracker = https://github.com/DillonB07/dill_tils/issues
    Discussions = https://github.com/DillonB07/dill_tils/discussions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src